fix: alignment issues

--- a/src/NewsDisplay.scss
+++ b/src/NewsDisplay.scss
@@ -1,8 +1,3 @@
-@media only screen and (min-width: 577px) {
-  .container .news-feed .carousel-wrapper {
-    margin-left: calc(-1 * var(--carousel-sides));
-  }
-}
 .news-feed {
   --carousel-sides: 104px;
   //104px is the 80px preview of the previous card and the 24px gap between cards
@@ -18,7 +13,7 @@
     justify-content: space-between;
     flex-direction: row;
     margin: 0 calc(((100% - 1200px) / 2) - 10px) 3rem
-      calc(((100% - 1200px) / 2) - 10px);
+      calc(((100% - 1200px) / 2));
 
     .feed-header-title {
       font-size: 40px;
@@ -39,7 +34,13 @@
     width: calc(1200px + var(--carousel-sides) * 2);
     margin: auto;
     .feed-header-section {
-      margin: 0 0 3rem calc(((100% - 1200px) / 2) - 10px);
+      margin: 0 0 3rem calc(((100% - 1200px) / 2));
+    }
+  }
+
+  .horizontal-wrapper {
+    .row-spaced {
+      margin: 0 !important;
     }
   }
 
@@ -85,8 +86,22 @@
   }
 
   @media only screen and (max-width: 576px) {
+    .cards-wrapper,
+    .horizontal-wrapper {
+      margin: 0 20px;
+      .feed-header-section {
+        margin-left: 0;
+        margin-right: 0;
+        flex-direction: column;
+        .feed-header-title {
+          font-size: 24px;
+          margin-bottom: 1.5rem;
+          text-align: left;
+        }
+      }
+    }
     .carousel-wrapper {
-      padding-left: 32px;
+      padding: 0 20px;
 
       .feed-header-section {
         margin-left: 0;
@@ -107,5 +122,11 @@
         }
       }
     }
+  }
+}
+
+@media only screen and (min-width: 576px) {
+  .container .news-feed .carousel-wrapper {
+    margin-left: calc(-1 * var(--carousel-sides));
   }
 }
